add footer forma html

--- a/index.html
+++ b/index.html
@@ -583,6 +583,16 @@
             </li>
           </ul>
         </div>
+        <div>
+          <h2 lang="uk" class="footer-tittle-form">Підпишіться на розсилку</h2>
+          <form class="form" name="subscription">
+            <label
+              >Email
+              <input type="email" name="email" />
+              <button type="submit" lang="uk">Підписатися</button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
     <!--modal window-->
