add footer form (fixed)

--- a/index.html
+++ b/index.html
@@ -583,13 +583,23 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="container-subscription">
           <h2 lang="uk" class="footer-tittle-form">Підпишіться на розсилку</h2>
-          <form class="form" name="subscription">
-            <label
-              >Email
-              <input type="email" name="email" />
-              <button type="submit" lang="uk">Підписатися</button>
+          <form class="subscription-form" name="subscription-form">
+            <label class="subscription-form-grup">
+              <input
+                class="subscription-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+              <button class="footer-form-btn" type="submit" lang="uk">
+                Підписатися
+                <svg width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
             </label>
           </form>
         </div>
