--- a/portfolio.html
+++ b/portfolio.html
@@ -303,6 +303,26 @@
             </li>
           </ul>
         </div>
+        <div class="container-subscription">
+          <h2 lang="uk" class="footer-tittle-form">Підпишіться на розсилку</h2>
+          <form class="subscription-form" name="subscription-form">
+            <label class="subscription-form-grup">
+              <input
+                class="subscription-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                required
+              />
+              <button class="footer-form-btn" type="submit" lang="uk">
+                Підписатися
+                <svg width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-icon-send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
