--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
                 class="doing-img"
                 src="./images/img01.jpg"
                 width="370"
-                height="294px"
                 alt="работа за планшетом на беспроводной клавиатуре"
               />
             </li>
@@ -594,13 +593,13 @@
                 placeholder="E-mail"
                 required
               />
-              <button class="footer-form-btn" type="submit">
-                Підписатися
-                <svg width="24px" height="24px">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
             </label>
+            <button class="footer-form-btn" type="submit">
+              Підписатися
+              <svg width="24px" height="24px">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
@@ -657,7 +656,7 @@
                 class="register-form-message"
                 placeholder="Введіть текст"
                 name="message"
-                rows=""
+                rows="5"
               ></textarea>
             </label>
           </div>
@@ -671,11 +670,11 @@
             <svg class="register-icon" width="16px" height="15px">
               <use class="register-icon-uncheck" href="./images/icons.svg#icon-Vector"></use>
               <use class="register-icon-check" href="./images/icons.svg#icon-check"></use>
-              <span class="register-form-agreement-text">
-                Погоджуюся з розсилкою та приймаю
-                <a class="register-form-agreement-link" href="">Умови договору</a>
-              </span>
             </svg>
+            <span class="register-form-agreement-text">
+              Погоджуюся з розсилкою та приймаю
+              <a class="register-form-agreement-link" href="">Умови договору</a>
+            </span>
           </label>
           <button class="register-form-btn" type="submit">Відправити</button>
         </form>
