--- a/portfolio.html
+++ b/portfolio.html
@@ -314,13 +314,13 @@
                 placeholder="E-mail"
                 required
               />
-              <button class="footer-form-btn" type="submit" lang="uk">
-                Підписатися
-                <svg width="24px" height="24px">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
             </label>
+            <button class="footer-form-btn" type="submit">
+              Підписатися
+              <svg width="24px" height="24px">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
